--- a/index.html
+++ b/index.html
@@ -3,9 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TikTok for Business Splash Page</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <style>
+        .cta-button {
+            background-color: #25f4ee;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            display: inline-block;
+            margin-top: 10px;
+        }
+        .cta-button:hover {
+            background-color: #1bd7d4;
+        }
+        .download-section, .what-new-section {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        small {
+            font-size: 0.8em;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
-    hello world
+
+    <div class="container mt-4">
+        <!-- Top of the Page: Logo -->
+        <div class="text-center mb-4">
+            <img src="./assets/img/logo.jpg" style="max-width: 100%;" alt="TikTok for Business | Gaming on TikTok" class="img-fluid">
+        </div>
+
+        <!-- Header Section -->
+        <header class="mb-5 text-center">
+            <img src="./assets/img/header.jpg" style="height: 110px;"  alt="Header Image" class="img-fluid mb-3">
+            <a href="#form-section" class="cta-button">Get Started</a>
+        </header>
+
+        <!-- Sub-header Section -->
+        <section class="mb-5 text-center">
+            <h2>Officially Launched: TikTok's LiveOps Program</h2>
+            <p>
+                Join the program and take your game to the next level! With 83% of games failing within three years, 
+                and only 5% lasting beyond seven<sup>[1]</sup>, securing your game’s future is more urgent than ever.
+            </p>
+            <small>Source: [1] SuperScale, “Good Games Don't Die,” 2023 conducted by Atomik Research, TikTok's use of this data does not equate to an endorsement.</small>
+        </section>
+
+        <!-- Form Section -->
+        <section id="form-section" class="mb-5">
+            <h2 class="text-center">Sign Up</h2>
+            <!-- Example form elements -->
+            <form class="w-50 mx-auto">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name:</label>
+                    <input type="text" id="name" name="name" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" id="email" name="email" class="form-control">
+                </div>
+                <button type="submit" class="cta-button w-100">Submit</button>
+            </form>
+        </section>
+
+        <!-- Case Studies Section -->
+        <section class="mb-5">
+            <h2 class="text-center">Case Studies</h2>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <a href="https://ads.tiktok.com/business/en/inspiration/homa-clean-it?ab_version=experiment_2?attr_source=Paidmedia&attr_medium=other&campaign=homacasestudiesliveops-20241021-globalgaming-link">
+                            <img src="./assets/img/case study 1.jpg" style="height: 80px;" class="card-img-top" alt="Homa Case Study">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Homa</h5>
+                            <p class="card-text">Discover how Homa elevated its gaming strategy with TikTok's innovative solutions.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <a href="https://ads.tiktok.com/business/en/inspiration/lessmore-we-are-warriors?ab_version=experiment_2&agp_template_id=7400238737994547218?attr_source=Paidmedia&attr_medium=other&campaign=lmcasestudiesliveops-20241021-globalgaming-link">
+                            <img src="./assets//img/case study 2.jpg" style="height: 80px;" class="card-img-top" alt="Lessmore Case Study">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Lessmore</h5>
+                            <p class="card-text">How Lessmore mastered player engagement through TikTok's programs.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Direct Download Section -->
+        <section class="download-section mb-5">
+            <h2 class="text-center">Elevate Your Game’s LiveOps Performance</h2>
+            <p class="text-center">Download our one-pager to discover how TikTok’s LiveOps Program supports dynamic in-game events, seasonal updates, and content refreshes that drive long-term player engagement.</p>
+            <div class="text-center">
+                <a href="document.pdf" class="cta-button">Download</a>
+            </div>
+        </section>
+
+        <!-- What's New Section -->
+        <section class="what-new-section">
+            <h2 class="text-center mb-4">What’s New</h2>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <img src="./assets/img/Whats new 1.jpg" style="height: 120px;" class="card-img-top" alt="What's New 1">
+                        <div class="card-body">
+                            <p class="card-text">Explore the latest in mobile gaming strategies with our new content.</p>
+                            <a href="https://ads.tiktok.com/business/en/whatsnew?ab_version=experiment_2&tt4b_lang_redirect=1&agp_template_id=7400238737994547218?attr_source=Paidmedia&attr_medium=other&campaign=whatsnewliveops-20241021-globalgaming-link" class="cta-button">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <img src="./assets/img/whats new 2.jpg" style="max-height: 120px;" class="card-img-top" alt="What's New 2">
+                        <div class="card-body">
+                            <p class="card-text">Understand how to leverage TikTok for your mobile gaming success with our new insights.</p>
+                            <a href="https://ads.tiktok.com/business/en/blog/new-era-mobile-gaming-tiktok-success-strategies?ab_version=experiment_2&agp_template_id=7400238737994547218?attr_source=Paidmedia&attr_medium=other&campaign=nrgliveops-20241021-globalgaming-link" class="cta-button">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- Bootstrap JS (including Popper.js) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
 </body>
 </html>
