--- a/index.html
+++ b/index.html
@@ -37,12 +37,23 @@
         font-size: 0.8em;
         color: #555;
       }
+      .case-section .card:hover {
+        transform: scale(1.05); /* Slightly enlarge the card */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a shadow for depth */
+        transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
+      }
+
+      .case-section .card img {
+        transition: transform 0.3s ease; /* Smooth transition for the image as well */
+      }
+
+
     </style>
   </head>
   <body>
     <div class="container">
       <!-- Top of the Page: Logo -->
-      <div class="text-center ">
+      <div class="text-center">
         <img
           src="./assets/img/logo.jpg"
           style="max-width: 100%"
@@ -60,7 +71,7 @@
           class="img-fluid mb-4 w-50 w-md-50"
         />
         <a href="#form-section" class="cta-button mx-auto">Get Started</a>
-    </header>
+      </header>
 
       <!-- Sub-header Section -->
       <section class="main-section mb-5 text-center">
@@ -97,14 +108,19 @@
           </div>
           <div class="mb-3">
             <label for="address" class="form-label">Address:</label>
-            <input type="text" id="address" name="address" class="form-control" />
+            <input
+              type="text"
+              id="address"
+              name="address"
+              class="form-control"
+            />
           </div>
           <button type="submit" class="cta-button w-100">Submit</button>
         </form>
       </section>
 
       <!-- Case Studies Section -->
-      <section class="main-section mb-5">
+      <section class="main-section case-section mb-5">
         <h2 class="text-center mb-4">Case Studies</h2>
         <div class="row">
           <div class="col-md-6 mb-4">
